<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bubbles_splash"
    android:orientation="vertical"
    tools:context=".ui.SplashFragment">

    <TextView
        style="@style/TextHeader_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="218dp"
        android:text="@string/spiice" />

    <Button
        android:id="@+id/SplashButton"
        style="@style/ButtonStyle"
        android:layout_width="264dp"
        android:layout_height="54dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:text="@string/discover_the_platform" />

    <TextView
        android:id="@+id/SplashLogInText"
        style="@style/TextHeader_h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="38dp"
        android:text="@string/you_have_an_account_log_in" />

</LinearLayout>
