<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bubbles_sign_up"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <TextView
        style="@style/TextHeader_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:text="@string/sign_up" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_first_name"
        style="?attr/textInputFilledStyle"
        android:layout_width="295dp"
        android:layout_height="52dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:enabled="true"
        android:hint="@string/first_name"
        app:boxStrokeColor="#9D0DCA"
        app:boxStrokeWidth="2dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_last_name"
        style="?attr/textInputFilledStyle"
        android:layout_width="295dp"
        android:layout_height="52dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:enabled="true"
        android:hint="@string/last_name"
        app:boxStrokeColor="#FBEEFF"
        app:boxStrokeWidth="2dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_email"
        style="?attr/textInputFilledStyle"
        android:layout_width="295dp"
        android:layout_height="52dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:enabled="true"
        android:hint="@string/email"
        app:boxStrokeColor="#FBEEFF"
        app:boxStrokeWidth="2dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_password"
        style="?attr/textInputFilledStyle"
        android:layout_width="295dp"
        android:layout_height="52dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:enabled="true"
        android:hint="@string/password"
        app:boxStrokeColor="#FBEEFF"
        app:boxStrokeWidth="2dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/SignUpBottom"
        style="@style/ButtonStyle"
        android:layout_width="263dp"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/LogInText"
        style="@style/TextHeader_h3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/you_have_an_account_log_in" />

</LinearLayout>
