<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bubbles_onboarding"
    tools:context=".ui.OnboardingFragment">

    <TextView
        android:id="@+id/textViewOnboarding"
        style="@style/TextHeader_h3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/spiice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SkipUnboardingButton"
        style="@style/TextHeader_h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="11dp"
        android:text="@string/skip"
        app:layout_constraintBottom_toTopOf="@+id/textViewOnboarding"
        app:layout_constraintStart_toEndOf="@+id/textViewOnboarding" />

    <ImageView
        android:id="@+id/ImageNotes"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="92dp"
        android:src="@drawable/chat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOnboarding" />

    <TextView
        android:id="@+id/first_onboarding_text"
        style="@style/TextHeader_h4"
        android:layout_width="254dp"
        android:layout_height="58dp"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/find_projects_from_companies_everywhere_in_the_world"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageNotes" />

</androidx.constraintlayout.widget.ConstraintLayout>
